welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value temp?
  if ((temp1<=0&temp2>=100)||(temp?<=0&temp1>=100)) {
                              ^